# sdk2

./: README.md  otel-collector.yaml  pyproject.toml
telemetry/: collector.py  config.py
telemetry/auto/: class_instrumentor.py  database_instrumentor.py  decorators.py  framework_instrumentor.py  function_instrumentor.py
telemetry/core/: logs.py  metrics.py  otel_setup.py  traces.py
telemetry/utils/: trace_decision.py
